--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "smart_contracts/lib/forge-std"]
 	path = smart_contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "smart_contracts/lib/solmate"]
+	path = smart_contracts/lib/solmate
+	url = https://github.com/transmissions11/solmate
