--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "smart_contracts/lib/solmate"]
 	path = smart_contracts/lib/solmate
 	url = https://github.com/transmissions11/solmate
+[submodule "smart_contracts/lib/openzeppelin-contracts"]
+	path = smart_contracts/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
