--- a/smart_contracts/foundry.toml
+++ b/smart_contracts/foundry.toml
@@ -2,5 +2,14 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+optimizer = true
+optimizer_runs = 20_000
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+[rpc_endpoints]
+arbitrumFuji = "${AVALANCHE_FUJI_TESTNET_RPC_URL}"
+
+[etherscan]
+arbitrumFuji = { key = "${AVALANCHE_FUJI_TESTNET_API_KEY}" }
+
