--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@particle-network/connectkit": "^1.3.5",
+    "@spruceid/rebase-client": "^0.19.0",
+    "@spruceid/ssx": "^2.1.0",
+    "@spruceid/ssx-server": "^2.0.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-unity-webgl": "^9.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
