--- a/smart_contracts/package.json
+++ b/smart_contracts/package.json
@@ -17,6 +17,9 @@
     "@chainlink/contracts-ccip": "^1.2.1",
     "@nomicfoundation/hardhat-foundry": "^1.1.1",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "hardhat": "^2.19.5"
+    "@typechain/ethers-v6": "^0.5.1",
+    "glob": "^10.3.10",
+    "hardhat": "^2.19.5",
+    "typechain": "^8.3.2"
   }
 }
