fix: shift to ethers v5 due to not able to detect network (chain) changes

--- a/smart_contracts/package.json
+++ b/smart_contracts/package.json
@@ -21,5 +21,8 @@
     "glob": "^10.3.10",
     "hardhat": "^2.19.5",
     "typechain": "^8.3.2"
+  },
+  "dependencies": {
+    "@typechain/ethers-v5": "^11.1.2"
   }
 }
