--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@spruceid/rebase-client": "^0.19.0",
     "@spruceid/ssx": "^2.1.0",
     "@spruceid/ssx-server": "^2.0.0",
-    "ethers": "^6.11.0",
+    "ethers": "5.7.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
